tests/NormalTests/paczka1/fuzzy1/95029791.err
Error in line 2: jXjzN S773 62,3
Error in line 16: gihsU A77 31,1
Error in line 15: S773 A77 92,8
Error in line 24: gihsU S453 2009,8
Error in line 33: WNDO49g5 A77 42,9
Error in line 38: vm5XvaZpX8k S773 97,0
